Fixed login and register page, that where not working good on mobile phones. First draft of wtp.

--- a/css/fe/login.css
+++ b/css/fe/login.css
@@ -84,3 +84,29 @@ form a:hover {
 .social-login > div:hover {
 	background-color: #ffffffaa;
 }
+
+@media screen and (max-width: 800px) { 
+	.hidden {display: none !important;}
+	.full-container {
+		/*height: calc( 100vh + 160px );*/
+		/*padding: 80px 0;*/
+		height: auto;
+	}
+ 	
+	section > div {
+	}
+	.box {
+		width: 90vw;
+		margin: 100px 0;
+		height: auto;
+	}
+	input.normal-sized {
+		width: 100%;
+	}
+	button#button_login {
+		margin: 1rem 0 0 0 ;
+	}
+	button#button_register {
+		font-size: 1.5rem;
+	}
+}
